# docs/swagger.json
@@ -1,7 +1,119 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Service for working with tasks",
+        "title": "Swagger Tasker",
+        "contact": {},
+        "version": "1.0"
     },
-    "paths": {}
+    "host": "localhost:50052",
+    "paths": {
+        "/task": {
+            "post": {
+                "description": "Создает задачу",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "task"
+                ],
+                "summary": "Создание задачи",
+                "parameters": [
+                    {
+                        "description": "Данные для создания задачи",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/gateway.SwaggerCreateTaskRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/gateway.SwaggerCreateTaskResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Ошибка запроса",
+                        "schema": {
+                            "$ref": "#/definitions/gateway.SwaggerErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/gateway.SwaggerErrorResponse"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "gateway.SwaggerCreateTaskRequest": {
+            "type": "object",
+            "properties": {
+                "deadline": {
+                    "type": "string",
+                    "example": "2025-07-01T12:00:00Z"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "В ближайшем магазине"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "Купить хлеб"
+                }
+            }
+        },
+        "gateway.SwaggerCreateTaskResponse": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string",
+                    "example": "2025-07-01T12:00:00Z"
+                },
+                "deadline": {
+                    "type": "string",
+                    "example": "2025-07-01T12:00:00Z"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "В ближайшем магазине"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "a81bc81b-dead-4e5d-abff-90865d1e13b1"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "TODO"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "Купить хлеб"
+                },
+                "updatedAt": {
+                    "type": "string",
+                    "example": "2025-07-01T12:00:00Z"
+                }
+            }
+        },
+        "gateway.SwaggerErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "some error"
+                }
+            }
+        }
+    }
 }
